# Intelligent-text-analysis-back

./: .env.example  pyproject.toml  requirements.txt
src/: main.py
src/config/: supabase.py
src/errors/: domain_errors.py
src/models/: analysis_result_model.py  audio_transcription_model.py  document_model.py  documment_model.py
src/routes/: analyze.py  analyze_routes.py
src/schemas/: requests.py
src/services/: analysis_service.py  audio_service.py  audio_services.py  document_service.py  documment_services.py  file_reader_services.py  llm_pipeline_service.py  sentiment.py  sentiment_service.py  sentiment_services.py  speech_services.py  summarizer.py  summarizer_service.py  summarizer_services.py  topics_services.py  upload_files_service.py  upload_files_services.py
src/utils/: audio_utils.py  calculate_hash.py  chunk_text.py  run_blocking.py
src/workers/: audio_worker.py  document_worker.py  generic_worker.py
