[project]
name = "intelligent-text-analysis-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.7",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20250625",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "supabase>=2.28.0",
    "torch>=2.10.0",
    "transformers<5.0.0",
    "uvicorn>=0.40.0",
]
